--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-scripts": "1.0.17",
+    "recharts": "^1.0.0-beta.2",
     "styled-components": "^2.2.3"
   },
   "scripts": {
